city_weather_data/logs/dag_id=weather_dag_parallel/run_id=manual__2024-05-23T09:02:18.822413+00:00/task_id=group_a.load_weather_data/attempt=4.log
[2024-05-23T09:18:33.304+0000] {local_task_job_runner.py:120} INFO - ::group::Pre task execution logs
[2024-05-23T09:18:33.416+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: weather_dag_parallel.group_a.load_weather_data manual__2024-05-23T09:02:18.822413+00:00 [queued]>
[2024-05-23T09:18:33.474+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: weather_dag_parallel.group_a.load_weather_data manual__2024-05-23T09:02:18.822413+00:00 [queued]>
[2024-05-23T09:18:33.477+0000] {taskinstance.py:2306} INFO - Starting attempt 4 of 6
[2024-05-23T09:18:33.576+0000] {taskinstance.py:2330} INFO - Executing <Task(PythonOperator): group_a.load_weather_data> on 2024-05-23 09:02:18.822413+00:00
[2024-05-23T09:18:33.593+0000] {standard_task_runner.py:63} INFO - Started process 40861 to run task
[2024-05-23T09:18:33.598+0000] {standard_task_runner.py:90} INFO - Running: ['airflow', 'tasks', 'run', 'weather_dag_parallel', 'group_a.load_weather_data', 'manual__2024-05-23T09:02:18.822413+00:00', '--job-id', '128', '--raw', '--subdir', 'DAGS_FOLDER/weatherapi_dag.py', '--cfg-path', '/tmp/tmpkxa842e6']
[2024-05-23T09:18:33.611+0000] {standard_task_runner.py:91} INFO - Job 128: Subtask group_a.load_weather_data
[2024-05-23T09:18:33.718+0000] {task_command.py:426} INFO - Running <TaskInstance: weather_dag_parallel.group_a.load_weather_data manual__2024-05-23T09:02:18.822413+00:00 [running]> on host ubuntu2204
[2024-05-23T09:18:33.972+0000] {taskinstance.py:2648} INFO - Exporting env vars: AIRFLOW_CTX_DAG_EMAIL='test@gmail.com' AIRFLOW_CTX_DAG_OWNER='airflow' AIRFLOW_CTX_DAG_ID='weather_dag_parallel' AIRFLOW_CTX_TASK_ID='group_a.load_weather_data' AIRFLOW_CTX_EXECUTION_DATE='2024-05-23T09:02:18.822413+00:00' AIRFLOW_CTX_TRY_NUMBER='4' AIRFLOW_CTX_DAG_RUN_ID='manual__2024-05-23T09:02:18.822413+00:00'
[2024-05-23T09:18:33.979+0000] {taskinstance.py:430} INFO - ::endgroup::
[2024-05-23T09:18:34.088+0000] {postgres.py:176} INFO - Running copy expert: COPY weather_data FROM stdin WITH DELIMETER AS ',', filename: current_weather_data_kyiv.csv
[2024-05-23T09:18:34.116+0000] {base.py:84} INFO - Using connection ID '***_conn' for task execution.
[2024-05-23T09:18:34.900+0000] {taskinstance.py:441} INFO - ::group::Post task execution logs
[2024-05-23T09:18:34.906+0000] {taskinstance.py:2905} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/denys/airflow_venv/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 465, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/denys/airflow_venv/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 432, in _execute_callable
    return execute_callable(context=context, **execute_callable_kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/denys/airflow_venv/lib/python3.12/site-packages/airflow/models/baseoperator.py", line 400, in wrapper
    return func(self, *args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/denys/airflow_venv/lib/python3.12/site-packages/airflow/operators/python.py", line 235, in execute
    return_value = self.execute_callable()
                   ^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/denys/airflow_venv/lib/python3.12/site-packages/airflow/operators/python.py", line 252, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/denys/airflow/dags/weatherapi_dag.py", line 61, in load_data
    hook.copy_expert(sql="COPY weather_data FROM stdin WITH DELIMETER AS ','",
  File "/home/denys/airflow_venv/lib/python3.12/site-packages/airflow/providers/postgres/hooks/postgres.py", line 182, in copy_expert
    cur.copy_expert(sql, file)
psycopg2.errors.SyntaxError: syntax error at or near "DELIMETER"
LINE 1: COPY weather_data FROM stdin WITH DELIMETER AS ','
                                          ^

[2024-05-23T09:18:34.931+0000] {taskinstance.py:1206} INFO - Marking task as UP_FOR_RETRY. dag_id=weather_dag_parallel, task_id=group_a.load_weather_data, run_id=manual__2024-05-23T09:02:18.822413+00:00, execution_date=20240523T090218, start_date=20240523T091833, end_date=20240523T091834
[2024-05-23T09:18:34.990+0000] {standard_task_runner.py:110} ERROR - Failed to execute job 128 for task group_a.load_weather_data (syntax error at or near "DELIMETER"
LINE 1: COPY weather_data FROM stdin WITH DELIMETER AS ','
                                          ^
; 40861)
[2024-05-23T09:18:35.033+0000] {local_task_job_runner.py:240} INFO - Task exited with return code 1
[2024-05-23T09:18:35.053+0000] {taskinstance.py:3498} INFO - 0 downstream tasks scheduled from follow-on schedule check
[2024-05-23T09:18:35.056+0000] {local_task_job_runner.py:222} INFO - ::endgroup::
